--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,7 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
         <!-- Styles -->
         <style>
@@ -60,12 +61,13 @@
         <div class="flex-center position-ref full-height">
             <div class="content">
                 <div class="title m-b-md">
-                    4LOOP ExpressJS
+                    4LOOP SOCIAL FEEDS
                 </div>
 
                 <div class="links">
-                    <a href="https://github.com/4LOOPph/4LOOP-Express-API/blob/master/README.md">Documentation</a>
-                    <a href="https://github.com/4LOOPph/4LOOP-Express-API">GitHub</a>
+                    <a href="/facebook"><i class="fa fa-facebook-official" aria-hidden="true"></i> FACEBOOK</a>
+                    <a href="/twitter"><i class="fa fa-twitter" aria-hidden="true"></i> TWITTER</a>
+                    <a href="/instagram"><i class="fa fa-instagram" aria-hidden="true"></i> INSTAGRAM</a>
                 </div>
             </div>
         </div>
