--- a/app/views/facebook.ejs
+++ b/app/views/facebook.ejs
@@ -9,7 +9,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Styles -->
     <style>
     html,
@@ -53,6 +53,16 @@
         text-decoration: none;
         text-transform: uppercase;
     }
+    
+    .jumbotron {
+        text-align: center;
+        border-bottom: 1px solid #e5e5e5;
+    }
+    
+    .jumbotron .btn {
+        padding: 14px 24px;
+        font-size: 21px;
+    }
     </style>
 </head>
 
@@ -67,10 +77,38 @@
                 <a href="/twitter"><i class="fa fa-twitter" aria-hidden="true"></i> TWITTER</a>
                 <a href="/instagram"><i class="fa fa-instagram" aria-hidden="true"></i> INSTAGRAM</a>
             </div>
+            <br>
+            <br>
+            <p><a class="btn btn-lg btn-primary btn-auth" href="/api/facebook_auth" role="button">Login with Facebook</a></p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://cdn.rawgit.com/js-cookie/js-cookie/v2.1.3/src/js.cookie.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    $.ajax({
+        url: '/api/facebook-feeds',
+        type: 'GET',
+        beforeSend: function(request) {
+            request.setRequestHeader("FB_TOKEN", Cookies.get('FB_TOKEN'));
+        },
+        headers: {
+            "FB_TOKEN": Cookies.get('FB_TOKEN')
+        },
+        success: function(response) {
+            console.log('success responsesss: ', response);
+            if (response.response && response.response.length > 0) {
+                $('.btn-auth').hide();
+            }
+        },
+        error: function(errors) {
+            console.log('error responsesss: ', response);
+            $('.twitter-feeds').empty();
+        }
+    }).done(function() {
+        console.log('done')
+    });
+    </script>
 </body>
 
 </html>
